# VoxPop_Dias

./: README.md  pyproject.toml
app/: main.py  repository.py
templates/: VoxPop.html
