[tool.poetry]
name = "voxpop-dias"
version = "0.1.0"
description = "Voxpop Project"
authors = ["Dias <saidshabekov@gmail.com>"]
readme = "README.md"
packages = [{include = "voxpop_dias"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.22.0"
fastapi = "^0.100.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
css = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
